drkns 13.05.2020 23:46:30 +0100 - build 5597

1. Рефакторинг.

2. Уточнения 5592.

3. Warnings.

drkns 04.05.2020 20:12:47 +0300 - build 5596

1. Уточнение 5592.

zg 04.05.2020 14:50:25 +0300 - build 5595

1. с форума: Комбобокс позволяет установить курсор за пределы текста.

MZK 02.05.2020 23:48:24 -0700

1. Перевёл на английский ещё несколько страниц справки far:config.

drkns 02.05.2020 12:56:48 +0300 - build 5594

1. Уточнение 5592.

drkns 02.05.2020 02:54:39 +0300 - build 5593

1. Продолжение 5592 - упрощение копирования файлов и установки атрибутов.

2. Из копирования убрано разрезание файлов.

drkns 30.04.2020 20:15:13 +0300 - build 5592

1. Рефакторинг.

shmuel 23.04.2020 22:40:18 +0200 - build 5591

1. gh-233: Panel.SetPosIdx makes hidden Panel visible

drkns 21.04.2020 20:12:46 +0300 - build 5590

1. В некоторых случаях переключение кодовой страницы могло портить состояние редактора.

drkns 19.04.2020 22:19:47 +0300 - build 5589

1. gh-237: set command is too strict with whitespace

drkns 16.04.2020 20:14:43 +0300 - build 5588

1. Диалог исключения: поиск символов в папке упавшего плагина.

drkns 15.04.2020 22:27:36 +0300 - build 5587

1. Экспериментальное расширение UTF-8 конвертера для поддержки полного диапазона UCS-2, включая непарные суррогаты.

drkns 15.04.2020 02:08:30 +0300 - build 5586

1. Продолжение 5585.

drkns 14.04.2020 22:38:19 +0300 - build 5585

1. Как выяснилось, прекрасная библиотека SQLite прекрасно работает с UTF16, а именно:
   - конвертирует переданные строки в UTF8, при этом заменяя на 0xfffd всё, что не получилось.
   - пытается искать BOM в переданных строках и угадывать по нему, это LE или BE.
   Может быть это и уместно в какой-то сказочной стране, но точно не в нашем случае.
   Так как вся эта роскошь не отключается - будем конвертировать в UTF8 самостоятельно.

2. Рефакторинг.

drkns 13.04.2020 00:07:06 +0300 - build 5584

1. Не сохранялись приватные флаги элементов панелей ansi плагинов.
