@@ -1,3 +1,7 @@
+drkns 15.05.2020 18:05:22 +0100 - build 5598
+
+1. Запрос имени & пароля при переходам по сетевым путям.
+
 drkns 13.05.2020 23:46:30 +0100 - build 5597
 
 1. Рефакторинг.
@@ -1589,7 +1593,7 @@ drkns 08.11.2018 00:26:26 +0000 - build 5305
 
 2. Повторные вызовы SCTL_CREATESUBKEY могли приводить к лишним выделениям памяти.
 
-drkns 06.11.2018 20:35:22 +0000 - build 5304
+drkns 06.11.2018 20:35:22 +0000 - build 53044
 
 1. Переделана работа с SQLite: теперь при неудаче вместо возврата false или кодов ошибок (которые мы почти нигде не проверяли)
    бросаются исключения. Они пока что перехватываются при открытии db (из-за всего сопутствующего этому процессу шаманства)
